# tdlpackio

./: .gitattributes  .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.md  TDLPACK.md  TdlpackBackend.py  TdlpackIO.py  create_docs.sh  install.sh  pyproject.toml  pytdlpack.py  setup.py  xarray_backend.py
.github/ISSUE_TEMPLATE/: bug_report.md
demo/: create-station-sq.py
docs/: TdlpackIO.html  TdlpackIO.m.html  index.html  search.js  tdlpackio.html
docs/pytdlpack/: index.html  version.html
pytdlpack/: __init__.py  _grid_definitions.py  _pytdlpack.py
sampledata/: stations.sq  test1.sq  test2.sq
src/ext/: tdlpacklib.pyx
src/ext/tdlpacklib/: arinit.f  bswap.f  ckraend.f  cksysend.f  closefile.f90  createra.f90  fileaction.f  lmijll.f  lmllij.f  openlog.f90  pack1d.f  packyy.f  unpack_wrapper.f90  unpklx.f  writefile.f90  writera.f90  wrtmc.f
src/tdlpackio/: __init__.py  _tdlpackio.py  grids.py  itdlp.py  lstdlp.py  templates.py  utils.py  version.py  xarray_backend.py
src/tdlpacklib/: ckraend.f  clfilm.f  closefile.f90  openfile.f90  openlog.f90  pack_wrapper.f90  pkms97.f  pkms99.f  psijll.f  rdtmc.f  tdlpacklib.pyf  tdlpacklib_mod.f90  unpack_wrapper.f90  unpkbg.f  writefile.f90  writera.f90  writesq.f90  wrtdlmc.f
tdlpack/: _tdlpack.pyf  ckfilend.f  ckraend.f  clfm.f  closefile.f  createra.f  flopnm.f  gridij_to_latlon.f  gridij_to_latlon.f90  latlon_to_gridij.f90  mcijll.f  mcllij.f  openfile.f  openlog.f90  pack.f  pack1d.f  pack2d.f  packgp.f  packxx.f  pkc4lx.f  pkms00.f  pkms97.f  pkms99.f  pks4lx.f  psllij.f  rddatm.f  rddatmc.f  rdkeym.f  rdtdlm.f  rdtdlmc.f  rdtm.f  readfile.f  readfile.f90  reduce.f  tdlpack.pyf  trail.f  unpack.f  unpkoo.f  unpkpo.f  unpkps.f  (+9 more)
test/: gfspkd47.2017012600.rec94  test_compare.py  test_create_new_grid.py  test_create_new_station.py  test_packwrite.py  test_read.py  test_read_randomaccess.py  test_read_sequential.py  test_readwrite.py  test_tdlpackbackend.py  test_tdlpackio_fetch.py  test_tdlpackio_iter.py  test_tdlpackio_select.py
tests/: test_read_randomaccess.py  test_tdlpack_record_attrs.py  test_tdlpackio_iter.py
tests/data/: blend.analysisgrconst.co.ra  gfspkd47.2017020100.sq  test1_2.sq
