[build-system]
requires = [
  "cython>3",
  "numpy",
  "setuptools>=61.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "tdlpackio"
description = "Python interface for reading and writing TDLPACK data"
authors = [
  {name = "Eric Engle", email = "eric.engle@noaa.gov"},
]
requires-python = ">=3.8,<3.14"
keywords = [
  "weather", "data-science", "numpy", "meteorology", "weather-data", "atmospheric-science",
  "statistics", "mos", "statpp"
]
readme = "README.md"
license = {text = "MIT"}
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Programming Language :: Cython",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Topic :: Scientific/Engineering :: Atmospheric Science",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Operating System :: POSIX",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
]
dependencies = [
  "numpy",
] 
dynamic = ["version"]

[project.scripts]
lstdlp = "tdlpackio:lstdlp._lstdlp_main"

[project.urls]
Documentation = "https://noaa-mdl.github.io/tdlpackio"
Respository = "https://github.com/NOAA-MDL/tdlpackio"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["tdlpackio"]
zip-safe = false

[tool.setuptools.dynamic]
version = {attr = "tdlpackio.__config__.tdlpackio_version"}
